fix button text overlap

--- a/abas-eb-web-ui/src/main/resources/static/custom.css
+++ b/abas-eb-web-ui/src/main/resources/static/custom.css
@@ -12,6 +12,8 @@
 
 .btn {
     border: 1px solid #1BBAA5;
+    white-space: normal !important;
+    word-wrap: break-word;
 }
 
 .btn:hover {
